<resources>
    <string name="app_name">Ballot Drop Box Integrity Report\nand Acceptance Log</string>

    <!-- Login/Register fragment -->
    <string name="login_register_text">Login/Register User</string>
    <string name="login_user_name_hint">User name</string>
    <string name="login_password_hint">Password</string>
    <string name="login">Login</string>
    <string name="login_register">Register</string>

    <!-- Register New User fragment -->
    <string name="register_text">Register New User</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_user_name_hint">Enter a user name</string>
    <string name="register_password_hint">Enter a password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_register">Register</string>
    <string name="register_back">Back</string>

    <!-- Retrieve/Transfer Ballots fragment -->
    <string name="main_retrieve">Retrieve\nBallots</string>
    <string name="main_transfer">Transfer Ballots</string>
    <string name="main_logged_in_as">You are logged in as </string>

    <!-- Retrieve fragment -->
    <string name="retrieve_text">Drop Box Location:</string>
    <string name="retrieve_dropbox_name_placeholder">{dropbox location name}</string>
    <string name="retrieve_dropbox_address_placeholder">{dropbox location address}</string>
    <string name="retrieve_initials_hint">Employee Initials</string>
    <string name="retrieve_mib_dropbox">Mail-In Ballot Drop Box</string>
    <string name="retrieve_ballot_bins">Ballot Bin(s) containing Mail-In Ballots</string>
    <string name="retrieve_sig1">Staff Signature 1</string>
    <string name="retrieve_sig2">Staff Signature 2</string>
    <string name="retrieve_submit">Submit</string>
    <string name="retrieve_back">Back</string>

    <!-- MIB Dropbox fragment -->
    <string name="mib_dropbox_text">Mail-In Ballot Drop Box</string>
    <string name="mib_steps_text">1. Seal removed and placed on back of form.\n
        2. All mail-in ballots removed and placed in bin(s).\n
        3. Drop box locked and re-sealed as recorded below.</string>
    <string name="mib_steps_checked_text">Steps 1–3 completed.</string>
    <string name="mib_steps_verify_content_description">complete steps hint</string>
    <string name="mib_removed_seal_text">Removed Seal #:</string>
    <string name="mib_removed_seal_content_description">verify removed seal hint</string>
    <string name="mib_new_seal_hint">New Seal #</string>
    <string name="mib_submit">Submit</string>
    <string name="mib_back">Back</string>

    <!-- Ballot Bin fragment -->
    <string name="ballot_bin_text">Ballot Bin(s) containing Mail-In Ballots</string>
    <string name="ballot_bin_steps_text">1. Bin(s) locked and sealed.\n2. Seal #\'s recorded below.\n3. Bin(s) placed in vehicle for transport to HCBOE Main Office.</string>
    <string name="ballot_bin_steps_checked_text">Steps 1–3 completed.</string>
    <string name="ballot_bin_seal1_hint">Ballot Bin #1 Seal #</string>
    <string name="ballot_bin_seal2_hint">Ballot Bin #2 Seal #</string>
    <string name="ballot_bin_submit">Submit</string>
    <string name="ballot_bin_back">Back</string>

    <!-- Transfer fragment -->
    <string name="transfer_text">HCBOE Main Office</string>
    <string name="transfer_ballot_bins_hint">No. of Ballot Bins</string>
    <string name="transfer_bin1_seal_hint">Ballot Bin #1 Seal #</string>
    <string name="transfer_bin2_seal_hint">Ballot Bin #2 Seal #</string>
    <string name="transfer_ballots_received_hint">No. of Mail-in Ballots Received</string>
    <string name="transfer_transport_sig">Transporting Signature</string>
    <string name="transfer_receive_sig">Receiving Signature</string>
    <string name="transfer_submit">Submit</string>
    <string name="transfer_back">Back</string>

    <!-- Signature fragment -->
    <string name="signature_clear">Clear</string>
    <string name="signature_back">Back</string>
    <string name="signature_submit">Accept</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_steps_completed">verify steps completed</string>
    <string name="mib_camera_button">camera</string>
    <string name="ballot_bin_seal1_camera">camera</string>
    <string name="ballot_bin_seal2_camera">camera</string>
    <string name="sig_camera_button">camera</string>
    <string name="transfer_seal2_camera">camera</string>
    <string name="transfer_seal1_camera">camera</string>

</resources>